added abstract for luke spademan

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -142,10 +142,11 @@
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
-{#                            <div class="ts-speaker-session">#}
-{#                                <h4 class="session-title">{{ _('TBD') }}</h4>#}
-{#                                <p>{{ _('TBD') }}</p>#}
-{#                            </div>#}
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Controling a robotic arm with micro:bits. How to make computer science education more interesting.') }}</h4>
+                                <p>{{ _('Captivating a group of children for a sustained period of time is notoriously hard. I will be exporing with you how the micro:bit can be used to engage a young audience with interactive demos and programming activities.') }}</p>
+                                <p>{{ _('Children love to physically interact with hardware. That is what is great about the micro:bit. It not only has built in LEDs and buttons but can also control bigger more exciting electronics like robotic arms. This allows for setup that gives students of all ability levels a challenge. Students that are beginners to programming can be given a more complete program or walk throught a worksheet that takes them through the process of controling the device (in this case a robotic arm) step by step. Students that have higher programming skills can be given a more bare bones / boilerplate source file and can write code to control the arm with less guidance.') }}</p>
+                            </div>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
