Added EduSummit workshop lecturers

--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -194,6 +194,7 @@
                                           teoretické základy, ktoré nám umožňujú vyhodnotiť a porovnať rôzne algoritmy
                                           pre rovnakú triedu problémov.') }}
                                 </p>
+                                <p><b>{{ _('Lektori: Tobias Kohn a Dennis Komm z ETH Zurich') }}</b></p>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
@@ -223,6 +224,7 @@
                                           BBC micro:bit, s prezentáciou praktických tipov na rôzne aktivity pre študentov.
                                           Vzbuďme v študentoch chuť programovať!') }}
                                 </p>
+                                <p><b>{{ _('Lektori: Magdaléna Bellayová a Eva Kupčová z Gymnázia Golianova 68 v Nitre') }}</b></p>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
@@ -269,6 +271,7 @@
                                 <p>
                                     {{ _('Programovanie je cool a sexi. Ak však chcete osloviť súčasné decká, asi už neuspejete výpisom hlášky "Hello, world!". Rovnako tak neuspejete výpisom čísiel od 1 po 10 pri prezentovaní cyklov. A už vôbec nie v prostredí čiernej obrazovky a bielych písmeniek. Pre nich už nie je počítač čarovná skrinka. Oni za tým počítačom odsedia v porovnaní s nami častokrát výrazne viac hodín. A častokrát je prvým kontaktom s počítačom práve počítačová hra. Na tomto workshope vám ukážem, ako sa dá počítačová hra vytvoriť za krátky čas zhruba na 100 riadkoch kódu. Nie - nebudeme hádať číslo, ktoré si počítač myslí. Budeme vytvárať jednoduchý remake Arkanoid-u v peknom grafickom prevedení. To všetko v jazyku Python s použitím knižnice PyGame Zero.') }}
                                 </p>
+                                <p><b>{{ _('Lektor: Miroslav Biňas z TUKE') }}</b></p>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
