Added BTC payment option

--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -27,6 +27,7 @@
         <div class="col-md-12">
           <tito-widget event="pyconsk/2019"></tito-widget>
           <p>{{ _('You can also buy tickets directly on the <a href="https://ti.to/pyconsk/2019" target="_blank">https://ti.to/pyconsk/2019</a> website in case the tito widget is not displayed correctly.') }}</p>
+	  <p>{{ _('For transaction in Bitcoin use:  <a href="https://tallyco.in/s/e51yzw/" target="_blank">https://tallyco.in/s/e51yzw</a>') }}</p>
         </div>
       </div>
     </div>
