added jakub balas as a speaker

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -142,16 +142,48 @@
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
-                            <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Controling a robotic arm with micro:bits. How to make computer science education more interesting.') }}</h4>
                                 <p>{{ _('Captivating a group of children for a sustained period of time is notoriously hard. I will be exporing with you how the micro:bit can be used to engage a young audience with interactive demos and programming activities.') }}</p>
                                 <p>{{ _('Children love to physically interact with hardware. That is what is great about the micro:bit. It not only has built in LEDs and buttons but can also control bigger more exciting electronics like robotic arms. This allows for setup that gives students of all ability levels a challenge. Students that are beginners to programming can be given a more complete program or walk throught a worksheet that takes them through the process of controling the device (in this case a robotic arm) step by step. Students that have higher programming skills can be given a more bare bones / boilerplate source file and can write code to control the arm with less guidance.') }}</p>
                             </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 4 end -->
+            </div><!-- Speaker row 4 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/balas.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Jakub Balas</h3>
+                            <p class="ts-speaker-designation">{{ _('Python engineer at Iceye') }}</p>
+{#                            <ul class="ts-speaker-social-links">#}
+{#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
+{#                            </ul>#}
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('After several years of using Python in e-commerce, banking, and media sectors in the UK, Jakub currently leads a technical side of ground segment at Iceye, the Earth observation start up in Finland. They are building a large synthetic-aperture radar (SAR) satellite constellation and using Python extensively in various parts of the project. Iceye has recently successfully launched their second satellite ICEYE-X2 on board of SpaceX’s Falcon 9.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Using python in new space industry is not a rocket science') }}</h4>
+                                <p>
+                                    {{ _('What we do at Iceye and how python is allowing us to grow fast and be unique.') }}
+                                </p>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
-                </div><!-- Speaker list 3 end -->
-            </div><!-- Speaker row 3 -->
+                </div><!-- Speaker list 5 end -->
+            </div><!-- Speaker row 5 -->
 
         </div>
     </section>
