added titans as sponsors

--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -44,6 +44,28 @@
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 1 end -->
+
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/titans.svg') }}" alt="Titans Freelancers logo"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Titans freelancers</h4>
+              <p>
+                {{ _('TITANS freelancers offers many attractive jobs and projects for IT freelancers.
+                      We cooperate with thousands of IT freelancers in Slovakia and abroad. We have signed partnership
+                      agreements with prestigious companies, institutions and recruitment agencies operating in Austria,
+                      Switzerland, Germany, Croatia, the Czech Republic and Slovakia, allowing us to offer IT
+                      freelancers attractive projects. See the list of jobs at www.titans.sk.') }}
+              </p>
+              <div class="sponsor-web-link">
+                <a href="https://www.titans.sk/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/TitansFreelancers" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/TITANS3lancers" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/company/titans-freelancers-s-r-o" target="_blank"><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 2 end -->
       </div><!--/ Content row 1 end -->
 
       <div class="row text-center">
