--- a/templates/index.html
+++ b/templates/index.html
@@ -338,6 +338,16 @@
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
 
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/holtermann.jpg') }}"
+                             alt="Markus Holtermann">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Markus Holtermann</h3>
+                            <p class="ts-speaker-designation">{{ _('Back-end and infrastructure engineer at Crate.io, Django core contributor') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 1 end -->
 
             {#			<div class="gap-40"></div>#}
