--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -122,6 +122,38 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/holtermann.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Markus Holtermann</h3>
+                            <p class="ts-speaker-designation">{{ _('Back-end and infrastructure engineer at Crate.io, Django core contributor') }}</p>
+{#                            <ul class="ts-speaker-social-links">#}
+{#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
+{#                            </ul>#}
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Markus Holtermann works as a back-end and infrastructure engineer at Crate.io. He has been a Django core contributor since early 2015. He is a member of the Django security team as well as an organizer and advisor for DjangoCon conferences. Markus has been a project lead at the German ubuntuusers.de community support platform where he discovered Python and Django in 2010.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Less Obvious Things To Do With Django\'s ORM.') }}</h4>
+                                <p>{{ _('Django’s ORM is powerful. And it has been for ages. It only became even more powerful over the last years. Django’s ORM can be intimidating because it can do so many things. And it can also be confusing when trying to find out how to do things.') }}</p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 4 end -->
+            </div><!-- Speaker row 4 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
                             <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/spademan.jpg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
