--- a/templates/index.html
+++ b/templates/index.html
@@ -337,7 +337,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 1 end -->
 
+            <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/holtermann.jpg') }}"
@@ -347,10 +349,61 @@
                             <p class="ts-speaker-designation">{{ _('Back-end and infrastructure engineer at Crate.io, Django core contributor') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/spademan.jpg') }}"
+                             alt="Luke Spademan">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Luke Spademan</h3>
+                            <p class="ts-speaker-designation">{{ _('CS student and Python enthusiast') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/balas.jpg') }}"
+                             alt="Jakub Balas">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Jakub Balas</h3>
+                            <p class="ts-speaker-designation">{{ _('Python engineer at Iceye') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 1 end -->
+            </div><!-- Content row 2 end -->
 
-            {#			<div class="gap-40"></div>#}
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/luff.jpg') }}"
+                             alt="Meredydd Luff">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Meredydd Luff</h3>
+                            <p class="ts-speaker-designation">{{ _('Creator of Anvil') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/taylor-morgan.jpg') }}"
+                             alt="Shaun Taylor-Morgan">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Shaun Taylor-Morgan</h3>
+                            <p class="ts-speaker-designation">{{ _('Python developer at Anvil') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/balas.jpg') }}"#}
+{#                             alt="Jakub Balas">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name">Jakub Balas</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Python engineer at Iceye') }}</p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 3 end -->#}
+            </div><!-- Content row 3 end -->
 
         </div><!--/ Container end -->
     </section>
