--- a/templates/index.html
+++ b/templates/index.html
@@ -393,16 +393,16 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/balas.jpg') }}"#}
-{#                             alt="Jakub Balas">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name">Jakub Balas</h3>#}
-{#                            <p class="ts-speaker-designation">{{ _('Python engineer at Iceye') }}</p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 3 end -->#}
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stevko.png') }}"
+                             alt="Adam Števko">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Adam Števko</h3>
+                            <p class="ts-speaker-designation">{{ _('Security Engineer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 3 end -->
 
         </div><!--/ Container end -->
