--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -305,6 +305,45 @@
                 </div><!-- Speaker list 7 end -->
             </div><!-- Speaker row 7 -->
 
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stevko.png') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Adam Števko</h3>
+                            <p class="ts-speaker-designation">{{ _('Security/DevOps Engineer') }}</p>
+{#                            <ul class="ts-speaker-social-links">#}
+{#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
+{#                            </ul>#}
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Adam is currently working as Security Engineer and has already been SRE/System Engineer/DevOps '
+                                         'Engineer for a long time. He is a UNIX Lover, devoted Python user and evangelist. Interested '
+                                         'in operating systems, security, networking and almost anything interesting.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Be a good colleague and help your Security Engineer!') }}</h4>
+                                <p>
+                                    {{ _('Security is a shared responsibility. In this talk, I will show you how software engineers '
+                                         'can leverage static code analysis for locating most common security vulnerabilities and '
+                                         'integrate these checks into their CI systems. Following these guidelines, you will make '
+                                         'your Security Engineers happy and your code more secure.') }}
+                                </p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 7 end -->
+            </div><!-- Speaker row 7 -->
+
         </div>
     </section>
 {% endblock %}
