Added social links for anvil

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -231,7 +231,7 @@
                             <p class="ts-speaker-designation">{{ _('Creator of Anvil') }}</p>
 {#                            <ul class="ts-speaker-social-links">#}
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
-{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+                                <li><a href="https://twitter.com/anvil_works"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
 {#                            </ul>#}
@@ -272,7 +272,7 @@
                             <p class="ts-speaker-designation">{{ _('Python developer at Anvil') }}</p>
 {#                            <ul class="ts-speaker-social-links">#}
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
-{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+                                <li><a href="https://twitter.com/anvil_works"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
 {#                            </ul>#}
