Updated social media links for speakers

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -229,12 +229,12 @@
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name dark">Meredydd Luff</h3>
                             <p class="ts-speaker-designation">{{ _('Creator of Anvil') }}</p>
-{#                            <ul class="ts-speaker-social-links">#}
+                            <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
                                 <li><a href="https://twitter.com/anvil_works"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                            </ul>#}
+                            </ul>
                             <div class="ts-speaker-bio">
                                 <p>
                                     {{ _('Meredydd has been programming since the halcyon days of QBasic and Delphi, when it was easy to get started building software. He created Anvil to bring those days back. Meredydd has worked in startups from telecomms to music, and has a PhD in the usability of programming from Cambridge.') }}
@@ -270,12 +270,12 @@
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name dark">Shaun Taylor-Morgan</h3>
                             <p class="ts-speaker-designation">{{ _('Python developer at Anvil') }}</p>
-{#                            <ul class="ts-speaker-social-links">#}
+                            <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
                                 <li><a href="https://twitter.com/anvil_works"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                            </ul>#}
+                            </ul>
                             <div class="ts-speaker-bio">
                                 <p>
                                     {{ _('Shaun started programming in earnest by simulating burning fusion plasmas in the world''s biggest laser system. '
@@ -317,12 +317,12 @@
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name dark">Adam Števko</h3>
                             <p class="ts-speaker-designation">{{ _('Security/DevOps Engineer') }}</p>
-{#                            <ul class="ts-speaker-social-links">#}
+                            <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
-{#                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>#}
+                                <li><a href="https://twitter.com/xen0l"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
-{#                            </ul>#}
+                            </ul>
                             <div class="ts-speaker-bio">
                                 <p>
                                     {{ _('Adam is currently working as Security Engineer and has already been SRE/System Engineer/DevOps '
