--- a/templates/index.html
+++ b/templates/index.html
@@ -405,6 +405,39 @@
                 </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 3 end -->
 
+            <div class="row"><!-- row 4 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dygalo.jpg') }}"
+                             alt="Dmitry Dygalo">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Dmitry Dygalo</h3>
+                            <p class="ts-speaker-designation">{{ _('Tech Lead at Kiwi.com') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hopko.jpg') }}"
+                             alt="Samuel Hopko">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Samuel Hopko</h3>
+                            <p class="ts-speaker-designation">{{ _('Cloud technology enthusiast') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"
+                             alt="Miroslav Šedivý">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Miroslav Šedivý</h3>
+                            <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 4 end -->
+
         </div><!--/ Container end -->
     </section>
 
