Updated venue with address tag for mobile devices

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -46,10 +46,12 @@
 
           <h2>{{ _('Venue Address') }}</h2>
           <p class="text-justify">
-            {{ _('Slovak University of Technology in Bratislava') }}<br/>
+            <address>
+	    {{ _('Slovak University of Technology in Bratislava') }}<br/>
             {{ _('Faculty of Informatics and Information Technologies') }}<br/>
             Ilkovičova 2<br/>
-            842 16 Bratislava 4
+            84216 Bratislava 4
+	    </address>
           </p>
 
           <h2>{{ _('Travelling to Bratislava') }}</h2>
