Updated social links`

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -359,8 +359,8 @@
                             <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
                                 <li><a href="https://twitter.com/Stranger6667"><i class="fa fa-twitter"></i></a></li>
-{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
                                 <li><a href="https://www.linkedin.com/in/dmitry-dygalo-aa7a56b2/"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://github.com/Stranger6667"><i class="fa fa-github"></i></a></li>
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
