--- a/templates/index.html
+++ b/templates/index.html
@@ -438,6 +438,39 @@
                 </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 4 end -->
 
+            <div class="row"><!-- row 5 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/pandey.jpg') }}"
+                             alt="Manoj Pandey">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Manoj Pandey</h3>
+                            <p class="ts-speaker-designation">{{ _('Software Engineer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hopko.jpg') }}"#}
+{#                             alt="Samuel Hopko">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name">Samuel Hopko</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Cloud technology enthusiast') }}</p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 2 end -->#}
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"#}
+{#                             alt="Miroslav Šedivý">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name">Miroslav Šedivý</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 3 end -->#}
+            </div><!-- Content row 5 end -->
+
         </div><!--/ Container end -->
     </section>
 
