fixed twitter link for Manoj Pandey

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -502,7 +502,7 @@
                             <p class="ts-speaker-designation">{{ _('Software Engineer at Yelp') }}</p>
                             <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
-                                <li><a href="https://twitter.com/eumiro"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://twitter.com/onlyrealmvp"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
 {#                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>#}
                             </ul>
