Added Joel Lord as a speaker

--- a/templates/index.html
+++ b/templates/index.html
@@ -449,16 +449,16 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hopko.jpg') }}"#}
-{#                             alt="Samuel Hopko">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name">Samuel Hopko</h3>#}
-{#                            <p class="ts-speaker-designation">{{ _('Cloud technology enthusiast') }}</p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 2 end -->#}
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/lord.jpg') }}"
+                             alt="Joel Lord">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Joel Lord</h3>
+                            <p class="ts-speaker-designation">{{ _('Python enthusiast and security evangelist') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
 {#                <div class="col-xs-12 col-sm-6 col-md-4">#}
 {#                    <div class="ts-speaker transparent">#}
 {#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"#}
