--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -69,6 +69,31 @@
       </div><!--/ Content row 1 end -->
 
       <div class="row text-center">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/redhat.svg') }}" alt="Red Hat logo"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Red Hat</h4>
+              <p>
+                {{ _('Red Hat is the world''s leading provider of open source software solutions, '
+                     'using a community-powered approach to reliable and high-performing cloud, '
+                     'Linux, middleware, storage, and virtualization technologies. As a connective '
+                     'hub in a global network of enterprises, partners, and open source communities, '
+                     'Red Hat helps create innovative technologies that liberate resources for '
+                     'growth and prepare customers for the future of IT.') }}
+              </p>
+              <div class="sponsor-web-link">
+                <a href="https://www.redhat.com/en" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/RedHatEMEA/?brand_redir=11218770329" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/RedHat" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="http://www.linkedin.com/company/red-hat" target="_blank"><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+      </div><!--/ Content row 2 end -->
+
+      <div class="row text-center">
         <h3 class="sponsor-title">{{ _('Bronze Sponsors') }}</h3>
 
         <div class="col-xs-12 col-sm-4 col-md-4">
@@ -105,6 +130,21 @@
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 1 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/techevents.png') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">techevents.online</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://techevents.online" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/techevents.online/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/TechEventOnline" target="_blank"><i class="fa fa-twitter"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 2 end -->
       </div>
 
       <div class="row text-center">
