--- a/templates/index.html
+++ b/templates/index.html
@@ -214,6 +214,20 @@
             <div class="row">
                 <div class="col-md-12 text-left">
                     <div class="card">
+                        <h5 class="card-header">15.02.2019 - {{ _('The Call For Proposals is closed!') }}
+                        </h5>
+                        <div class="card-body">
+                            <p>
+                                {{ _('We have received almost 150 high quality talk and workshop proposals, thanks everyone for participation.') }} {{ _('We\'ll review the proposals as soon as possible and publish all of the speakers.') }}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 text-left">
+                    <div class="card">
                         <h5 class="card-header">01.12.2018 - {{ _('PyCon SK 2019 speakers and website redesign.') }}
                         </h5>
                         <div class="card-body">
@@ -342,7 +356,8 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/holtermann.jpg') }}"
+                        <img class="img-responsive"
+                             src="{{ url_for('static', filename='images/speakers/holtermann.jpg') }}"
                              alt="Markus Holtermann">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Markus Holtermann</h3>
@@ -352,7 +367,8 @@
                 </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/spademan.jpg') }}"
+                        <img class="img-responsive"
+                             src="{{ url_for('static', filename='images/speakers/spademan.jpg') }}"
                              alt="Luke Spademan">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Luke Spademan</h3>
@@ -385,7 +401,8 @@
                 </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/taylor-morgan.jpg') }}"
+                        <img class="img-responsive"
+                             src="{{ url_for('static', filename='images/speakers/taylor-morgan.jpg') }}"
                              alt="Shaun Taylor-Morgan">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Shaun Taylor-Morgan</h3>
@@ -459,16 +476,16 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"#}
-{#                             alt="Miroslav Šedivý">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name">Miroslav Šedivý</h3>#}
-{#                            <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 3 end -->#}
+                {#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+                {#                    <div class="ts-speaker transparent">#}
+                {#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"#}
+                {#                             alt="Miroslav Šedivý">#}
+                {#                        <div class="ts-speaker-info">#}
+                {#                            <h3 class="ts-speaker-name">Miroslav Šedivý</h3>#}
+                {#                            <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>#}
+                {#                        </div><!-- Info end -->#}
+                {#                    </div><!-- Speaker end -->#}
+                {#                </div><!-- Speaker Col 3 end -->#}
             </div><!-- Content row 5 end -->
 
         </div><!--/ Container end -->
