--- a/templates/index.html
+++ b/templates/index.html
@@ -476,17 +476,50 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-                {#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-                {#                    <div class="ts-speaker transparent">#}
-                {#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"#}
-                {#                             alt="Miroslav Šedivý">#}
-                {#                        <div class="ts-speaker-info">#}
-                {#                            <h3 class="ts-speaker-name">Miroslav Šedivý</h3>#}
-                {#                            <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>#}
-                {#                        </div><!-- Info end -->#}
-                {#                    </div><!-- Speaker end -->#}
-                {#                </div><!-- Speaker Col 3 end -->#}
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpeg') }}"
+                             alt="Jakub Šedinár">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Jakub Šedinár</h3>
+                            <p class="ts-speaker-designation">{{ _('Odoo evangelist') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 5 end -->
+
+            <div class="row"><!-- row 6 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpeg') }}"
+                             alt="Jakub Mertus">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Jakub Mertus</h3>
+                            <p class="ts-speaker-designation">{{ _('Data Scientist') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sydorenko.jpg') }}"
+                             alt="Sviatoslav Sydorenko">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Sviatoslav Sydorenko</h3>
+                            <p class="ts-speaker-designation">{{ _('Software Engineer and FOSS maintainer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpeg') }}"#}
+{#                             alt="Jakub Šedinár">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name">Jakub Šedinár</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Odoo evangelist') }}</p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 3 end -->#}
+{#            </div><!-- Content row 6 end -->#}
 
         </div><!--/ Container end -->
     </section>
