replaced photo and added linkedin for sviat sydorenko

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -685,7 +685,7 @@
                                 <li><a href="https://github.com/webknjaz"><i class="fa fa-github"></i></a></li>
                                 <li><a href="https://twitter.com/webKnjaZ"><i class="fa fa-twitter"></i></a></li>
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
-{#                                <li><a href="https://www.linkedin.com/in/jakub-sedinar-34b37a80/"><i class="fa fa-linkedin"></i></a></li>#}
+                                <li><a href="https://www.linkedin.com/in/webknjaz"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
