Updated speakers profile

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -452,7 +452,7 @@
                     <div class="col-xs-12 col-md-8">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name dark">Miroslav Šedivý</h3>
-                            <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>
+                            <p class="ts-speaker-designation">{{ _('Senior Software Developer at solute GmbH') }}</p>
                             <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
                                 <li><a href="https://twitter.com/eumiro"><i class="fa fa-twitter"></i></a></li>
@@ -461,27 +461,28 @@
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
-                                    {{ _('Born in Czechoslovakia, studied in France, living in Germany. Using Python '
-                                         'to make the sun shine and the wind blow. Imports from pandas and asyncio, '
-                                         'enjoys discovering the chaotic world of unicode and time zones.') }}
+                                    {{ _('Born in Czechoslovakia, studied in France, living in Germany. Using '
+                                    'Python to get you the lowest prices online. Addicted to foreign languages and '
+                                    'the “human” side of computing, such as writing systems, calendar and time zones, '
+                                    'and teaching computers to work on the boring tasks.') }}
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('A Day Has Only 24±1 Hours') }}</h4>
-                                <p> {{ _('Not only will the Sunday in the week after this PyCon.SK 2019 be one hour '
-                                         'shorter, but also it may steal you even more sleep because of all your Python '
-                                         'code that has to work smoothly during daylight saving time changes or '
-                                         'otherwise manipulate time zones. While correct working with datetime objects '
-                                         'and offsets can be mastered, you have no control of the information on local '
-                                         'time zones. Exclusive domain of geographers one hundred years ago, the time '
-                                         'zones adjustments became a toy in the hands of governments all around the '
-                                         'world.') }} </p>
-                                <p> {{ _('After a short overview of Python''s datetime and pytz libraries you''ll learn'
-                                         'how the information on time zone changes gets into your system. We''ll fly '
-                                         'quickly around the world''s over five hundred time zones, but will also '
-                                         'focus on the case of Slovakia and surrounding countries. Two centuries of '
-                                         'propaganda and chaos in thirty minutes. Maybe that will make you want to '
-                                         'avoid time zones in your code altogether!') }}</p>
+                                <p> {{ _('Not only will the Sunday in the week after this PyCon.SK 2019 be one '
+                                'hour shorter, but also it may steal you even more sleep because of all '
+                                'your Python code that has to work smoothly during daylight saving time '
+                                'changes or otherwise manipulate time zones. While correct working with '
+                                'datetime objects and offsets can be mastered, you have no control of the '
+                                'information on local time zones. Exclusive domain of geographers one '
+                                'hundred years ago, the time zones adjustments became a toy in the hands '
+                                'of governments all around the world.') }} </p>
+                                <p> {{ _('After a short overview of Pythons datetime and pytz libraries you\'ll '
+                                'learn how the information on time zone changes gets into your system. '
+                                'We\'ll fly quickly around the world\'s over five hundred time zones, but '
+                                'will also focus on the case of Slovakia and surrounding countries. Two '
+                                'centuries of propaganda and chaos in thirty minutes. Maybe that will '
+                                'make you want to avoid time zones in your code altogether!') }}</p>
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
